[tool.poetry]
name = "dreamvault"
version = "0.1.0"
description = "A web-based digital dream journal and analyzer"
authors = ["Dustyn Schellenberg <dustyn.schellenberg@vanguard.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3"
jinja2 = "^3.1"
itsdangerous = "^2.1"
click = "^8.1"
werkzeug = "^2.3"
flask-login = "^0.6"
flask-wtf = "^1.1"
wtforms = "^3.1"
sqlite-utils = "^3.36"

[tool.poetry.dev-dependencies]
# You can add dev tools like pytest, black, etc. if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
